--- a/homeworks/week6/hw2/index.html
+++ b/homeworks/week6/hw2/index.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>新拖延運動報名表單</title>
   <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
 </head>
 
@@ -27,79 +28,55 @@
           <span>活動地點：</span>
           <span>台北市大安區新生南路二段 1 號</span>
         </li>
-      </ul>     
+      </ul>
 
       <div class="reminding">* 必填</div>
-      
+
       <form action="" class="contact-form">
         <div class="info-title">
           暱稱 <span>*</span>
         </div>
         <div class="form-input">
-          <input 
-            type="text"
-            class="form-text-style"
-            placeholder="您的回答"
-            name="nickname"
-          ><div></div>
+          <input type="text" class="form-text-style" placeholder="您的回答" name="nickname">
+          <div></div>
         </div>
 
         <div class="info-title">
           電子郵件 <span>*</span>
         </div>
         <div class="form-input">
-          <input 
-            type="email"
-            class="form-text-style"
-            placeholder="您的電子郵件"
-            name="email"
-          ><div></div>
+          <input type="email" class="form-text-style" placeholder="您的電子郵件" name="email">
+          <div></div>
         </div>
 
         <div class="info-title">
           手機號碼 <span>*</span>
         </div>
         <div class="form-input">
-          <input
-            type="text"
-            class="form-text-style"
-            placeholder="您的手機號碼"
-            name="phone"
-          ><div></div>
+          <input type="text" class="form-text-style" placeholder="您的手機號碼" name="phone">
+          <div></div>
         </div>
 
         <div class="info-title">
           報名類型 <span>*</span>
         </div>
         <div class="form-input">
-          <input
-            type="radio"
-            class="form-radio-style"
-            name="program"
-            id="bed"
-          >
+          <input type="radio" class="form-radio-style" name="program" id="bed">
           <label for="bed">躺在床上用力想像實作</label>
         </div>
         <div class="form-input">
-          <input
-            type="radio"
-            class="form-radio-style"
-            name="program"
-            id="ground"
-          >
-          <label for="ground">趴在地上滑手機找現成的</label><div></div>
+          <input type="radio" class="form-radio-style" name="program" id="ground">
+          <label for="ground">趴在地上滑手機找現成的</label>
+          <div></div>
         </div>
 
         <div class="info-title">
           怎麼知道這個活動的？ <span>*</span>
         </div>
         <div class="form-input">
-          <input
-            type="textarea""
-            class="form-text-style"
-            placeholder="您的回答"
-            name="info-source"
-          ><div></div>
+          <input type="textarea""
+            class=" form-text-style" placeholder="您的回答" name="info-source">
+          <div></div>
         </div>
 
         <div class="info-title">
@@ -107,19 +84,12 @@
           <div class="otehr-suggetion">對活動的一些建議</div>
         </div>
         <div class="form-input">
-          <input
-            type="textarea""
-            class="form-text-style"
-            placeholder="您的回答"
-            name="other-suggestion"
-          >
+          <input type="textarea""
+            class=" form-text-style" placeholder="您的回答" name="other-suggestion">
         </div>
 
-        <div class="form-input" >
-          <input
-            type="submit"
-            class="form-submit-style"
-          >
+        <div class="form-input">
+          <input type="submit" class="form-submit-style">
         </div>
       </form>
       <div class="warning">請勿透過表單送出您的密碼。</div>
@@ -130,9 +100,16 @@
     <div class="copyright">© 2020 © Copyright. All rights Reserved.</div>
   </footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
+    crossorigin="anonymous"></script>
   <script src="index.js"></script>
 </body>
+
 </html>
