將 CSS class-name 改成常用的命名方式：bannerShadow → banner-shadow

--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -32,7 +32,7 @@
   </nav>
 
   <section class="banner">
-    <div class="bannerShadow"></div>
+    <div class="banner-shadow"></div>
     <header class="website-name-chinese">咬一口廚房</header>
   </section>
 
