將 week6_hw1 的圖片路徑改為相對路徑

--- a/homeworks/week6/hw1/index.html
+++ b/homeworks/week6/hw1/index.html
@@ -61,10 +61,10 @@
     </div>
 
     <div class="menu-pictures row">
-      <img src="/homeworks/week6/hw1/pictures/f-001.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
-      <img src="/homeworks/week6/hw1/pictures/f-002.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
-      <img src="/homeworks/week6/hw1/pictures/f-003.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
-      <img src="/homeworks/week6/hw1/pictures/f-004.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
+      <img src="./pictures/f-001.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
+      <img src="./pictures/f-002.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
+      <img src="./pictures/f-003.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
+      <img src="./pictures/f-004.png" alt="" class="col-md-3 col-sm-6 col-6 menu-picture">
     </div>
   </section>
 
@@ -77,21 +77,21 @@
     <div class="comments-outlayer">
       <div class="row comments">
         <div class="col-md-4">
-          <img src="/homeworks/week6/hw1/pictures/p-1@3x.png" alt="國父桑" class="avatar">
+          <img src="./pictures/p-1@3x.png" alt="國父桑" class="avatar">
           <div>國父桑</div>
           <div class="comment">
             <p>我一生疲於建國，去過日本，去過歐洲，卻從未到過台北101，也從來沒有吃過這麼好吃的東西...今天在時空旅行者的幫助下我終於吃到了...此生再無遺憾 QAQ!!</p>
           </div>
         </div>
         <div class="col-md-4">
-          <img src="/homeworks/week6/hw1/pictures/p-2@3x.png" alt="" class="avatar">
+          <img src="./pictures/p-2@3x.png" alt="" class="avatar">
           <div>可達鴨</div>
           <div class="comment">
             <p>三雙鞋等於30，兩個人加一雙鞋等於20，一雙冰淇淋加一雙冰淇淋加一個人等於13，那$#%$#%^%$^##$%等於多少...唉，大概咬一口就知道了!!!</p>
           </div>
         </div>
         <div class="col-md-4">
-          <img src="/homeworks/week6/hw1/pictures/p-3@3x.png" alt="" class="avatar">
+          <img src="./pictures/p-3@3x.png" alt="" class="avatar">
           <div>旅かえる旅行青蛙
           </div>
           <div class="comment">
